Created various modes, incl exclusion and hochbau detection.

--- a/.env.example
+++ b/.env.example
@@ -22,6 +22,9 @@ PROSPECT_ANALYSIS_CSV_FILENAME_TEMPLATE="ProspectAnalysisReport_{run_id}.csv"
 # See src/core/config.py for profile definitions (e.g., "default", "lean_formatted", "ManauvKlaus").
 INPUT_FILE_PROFILE_NAME="default"
 
+# Delimiter for CSV files. Use "\t" for tab-separated values.
+CSV_DELIMITER=";"
+
 # Number of consecutive empty rows to detect as end-of-data when ROW_PROCESSING_RANGE is open-ended.
 CONSECUTIVE_EMPTY_ROWS_TO_STOP="3"
 
@@ -48,30 +51,9 @@ LLM_MODEL_NAME="gemini-1.5-pro-latest"
 LLM_MODEL_NAME_SALES_INSIGHTS="gemini-1.5-pro-preview-06-05"
 LLM_TEMPERATURE="0.5"
 LLM_MAX_TOKENS="3000"
-# LLM_TOP_K: Controls the diversity of the response by limiting the sampling pool to the K most likely next tokens.
-# - How it works: At each step of token generation, the model considers only the top K most probable tokens.
-# - Effect: Higher values (e.g., 40-100) allow for more diversity and creativity. Lower values (e.g., 1-5) make the output more focused, deterministic, and potentially repetitive.
-# - Use cases:
-#   - Lower K for factual, specific answers or code generation where precision is key.
-#   - Higher K for creative writing, brainstorming, or generating varied options.
-# - Example: LLM_TOP_K="40"
-# - Valid range: Integer >= 1. If empty or 0, it's typically disabled (model uses its default or other sampling methods dominate).
-# - Note: Often used in conjunction with temperature. If temperature is very low (e.g., 0), top_k might have less impact as the most likely token is already heavily favored.
 LLM_TOP_K=""
-# LLM_TOP_P (Nucleus Sampling): Controls diversity by selecting from the smallest set of tokens whose cumulative probability exceeds P.
-# - How it works: Instead of a fixed number K, it considers tokens until their combined probability mass reaches P.
-# - Effect:
-#   - Higher values (e.g., 0.9 to 1.0) allow for more diversity, as more tokens are considered. 1.0 means consider all tokens.
-#   - Lower values (e.g., 0.7 to 0.9) make the output more focused on high-probability tokens, reducing "long-tail" randomness.
-# - Use cases:
-#   - Generally preferred over top_k for maintaining a balance between coherence and diversity.
-#   - A common default is 0.95. Lowering it can make responses more predictable.
-# - Example: LLM_TOP_P="0.95"
-# - Valid range: Float between 0.0 and 1.0 (exclusive of 0 if it disables, inclusive of 1.0). If empty, it's typically disabled or uses a model default.
-# - Note: It's generally recommended to use EITHER top_p OR top_k, but not both simultaneously, as their interactions can be complex.
-#   If both are set, the API/model might prioritize one or handle the combination in a specific way.
-#   Temperature is often used with top_p.
-LLM_TOP_P=""
+LLM_TOP_P="0.95"
+
 
 # === Extraction Profiles and Prompt Paths (relative to project root) ===
 # Active extraction profile: "minimal", "minimal_plus_summary", "enriched_direct" (future).
@@ -147,8 +129,8 @@ MAX_GOLDEN_PARTNERS_IN_PROMPT="10"
 
 # === Pipeline Execution Configuration ===
 # Defines the operational mode of the pipeline.
-# Supported modes: "full_analysis", "shop_detection"
-PIPELINE_MODE="shop_detection"
+# Supported modes: "full_analysis", "shop_detection", "hochbau_detection", "exclusion_detection"
+PIPELINE_MODE="exclusion_detection"
 
 # === Shop Detection Mode Settings ===
 # Keywords to find shop/product pages. Used when PIPELINE_MODE="shop_detection"
@@ -157,3 +139,11 @@ SHOP_DETECTION_TARGET_KEYWORDS="products,shop,store,buy,cart,checkout,pricing,pl
 PROMPT_PATH_SHOP_DETECTION="prompts/shop_detection_prompt.txt"
 # Output filename for shop detection mode.
 SHOP_DETECTION_OUTPUT_FILENAME_TEMPLATE="Shop_Detection_Report_{run_id}.csv"
+
+# === Exclusion Detection Mode Settings ===
+# Keywords to find relevant pages. Used when PIPELINE_MODE="exclusion_detection"
+EXCLUSION_DETECTION_TARGET_KEYWORDS="about,company,services,products,solutions,team,mission,imprint,impressum,kontakt,contact"
+# Prompt for the exclusion detection LLM call.
+PROMPT_PATH_EXCLUSION_DETECTION="prompts/exclusion_detection_prompt.txt"
+# Output filename for exclusion detection mode.
+EXCLUSION_DETECTION_OUTPUT_FILENAME_TEMPLATE="Exclusion_Detection_Report_{run_id}.csv"
