added two stage positive negative criteria mode

--- a/.env.example
+++ b/.env.example
@@ -129,8 +129,8 @@ MAX_GOLDEN_PARTNERS_IN_PROMPT="10"
 
 # === Pipeline Execution Configuration ===
 # Defines the operational mode of the pipeline.
-# Supported modes: "full_analysis", "shop_detection", "hochbau_detection", "exclusion_detection"
-PIPELINE_MODE="exclusion_detection"
+# Supported modes: "full_analysis", "shop_detection", "hochbau_detection", "exclusion_detection", "two_stage_classification"
+PIPELINE_MODE="two_stage_classification"
 
 # === Shop Detection Mode Settings ===
 # Keywords to find shop/product pages. Used when PIPELINE_MODE="shop_detection"
@@ -147,3 +147,11 @@ EXCLUSION_DETECTION_TARGET_KEYWORDS="about,company,services,products,solutions,t
 PROMPT_PATH_EXCLUSION_DETECTION="prompts/exclusion_detection_prompt.txt"
 # Output filename for exclusion detection mode.
 EXCLUSION_DETECTION_OUTPUT_FILENAME_TEMPLATE="Exclusion_Detection_Report_{run_id}.csv"
+
+# === Positive Criteria Detection Mode Settings ===
+# Keywords to find relevant pages. Used in the second stage of the two_stage_classification mode.
+POSITIVE_CRITERIA_DETECTION_TARGET_KEYWORDS="about,company,services,products,solutions,team,mission,imprint,impressum,kontakt,contact"
+# Prompt for the positive criteria detection LLM call.
+PROMPT_PATH_POSITIVE_CRITERIA_DETECTION="prompts/positive_criteria_prompt.txt"
+# Output filename for the two-stage classification mode.
+POSITIVE_CRITERIA_DETECTION_OUTPUT_FILENAME_TEMPLATE="Two_Stage_Classification_Report_{run_id}.csv"
