additional mech mode

--- a/.env.example
+++ b/.env.example
@@ -129,7 +129,7 @@ MAX_GOLDEN_PARTNERS_IN_PROMPT="10"
 
 # === Pipeline Execution Configuration ===
 # Defines the operational mode of the pipeline.
-# Supported modes: "full_analysis", "shop_detection", "hochbau_detection", "exclusion_detection", "two_stage_classification"
+# Supported modes: "full_analysis", "shop_detection", "hochbau_detection", "exclusion_detection", "two_stage_classification", "mechanical_engineering_detection"
 PIPELINE_MODE="two_stage_classification"
 
 # === Shop Detection Mode Settings ===
@@ -155,3 +155,19 @@ POSITIVE_CRITERIA_DETECTION_TARGET_KEYWORDS="about,company,services,products,sol
 PROMPT_PATH_POSITIVE_CRITERIA_DETECTION="prompts/positive_criteria_prompt.txt"
 # Output filename for the two-stage classification mode.
 POSITIVE_CRITERIA_DETECTION_OUTPUT_FILENAME_TEMPLATE="Two_Stage_Classification_Report_{run_id}.csv"
+
+# === Mechanical Engineering Detection Mode Settings ===
+# Keywords to find relevant pages. Used when PIPELINE_MODE="mechanical_engineering_detection"
+MECH_ENG_DETECTION_TARGET_KEYWORDS="maschinenbau,anlagenbau,sonderanlagenbau,automation,automatisierung,robotik,steuerungstechnik,antriebstechnik,fördertechnik,produktionstechnik,fertigungstechnik,werkzeugbau,zerspanung,schweissen,montage,industrie,industrieanlagen"
+# Prompt for the mechanical engineering detection LLM call.
+PROMPT_PATH_MECH_ENG_DETECTION="prompts/mechanical_engineering_prompt.txt"
+# Output filename for mechanical engineering detection mode.
+MECH_ENG_DETECTION_OUTPUT_FILENAME_TEMPLATE="Mechanical_Engineering_Report_{run_id}.csv"
+
+# === Slack Notification Settings ===
+# Set to "True" to enable Slack notifications upon pipeline completion.
+ENABLE_SLACK_NOTIFICATIONS="False"
+# Your Slack Bot User OAuth Token (starts with "xoxb-").
+SLACK_BOT_TOKEN=""
+# The ID of the Slack channel to send notifications to (e.g., "C1234567890").
+SLACK_CHANNEL_ID=""
