--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,7 @@
 pandas
 python-dotenv
-phonenumbers
-pydantic
-playwright
 google-generativeai
-tenacity
-beautifulsoup4
-httpx
-tldextract
+playwright
+slack_sdk
 openpyxl
+XlsxWriter
