--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,18 @@
-/.env
-/.venv
-/output_data
+# Environment variables
+.env
+
+# Caching
+cache/
+
+# Output data and logs
+output_data/
+*.log
+
+# Python virtual environment
+venv/
+.venv/
+env/
+
+# pycache files
 __pycache__/
-*.pyc
-# Jupyter Notebook checkpoints
-.ipynb_checkpoints
-# VS Code settings
-.vscode/
+
